[tool.poetry]
name = "API-Challenge_tier"
version = "0.0.1"
description = "ml engineering coding challenge tier app"
readme = "README.md"
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
sqlalchemy = "^1.3.18"
requests = "^2.25.1"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.pytest.ini_options]
minversion = "6.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
